# webservice-template-rust

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  platform.sh  prometheus.yaml
.prometheus/: docker-compose.yaml  prometheus.yaml
application/: Cargo.toml
application/src/: messages.rs
gateways/api/: Cargo.toml
gateways/api/src/: lib.rs  main.rs  metrics.rs  response.rs  server.rs  settings.rs
gateways/api/src/middlewares/: error_header.rs  metrics.rs  mod.rs  timeout.rs  tracing.rs
gateways/api/src/routes/: reply.rs
gateways/api/tests/: healthcheck.rs
infrastructure/: Cargo.toml
infrastructure/src/: telemetry.rs
