[workspace]
members = [
    "gateways/api",
    "infrastructure",
    "application"
]
default-members = ["gateways/api"]

[workspace.package]
authors = ["Gustavo Murayama <gmurayama@outlook.com>"]
version = "0.1.0"

[workspace.dependencies]
tracing = { version = "0.1" }
log = "0.4"
tokio = { version = "1.21" }
eyre = { version = "0.6" }