[workspace]
members = ["gateways/api", "infrastructure", "application"]
default-members = ["gateways/api"]

[workspace.package]
authors = ["Gustavo Murayama <gmurayama@outlook.com>"]
version = "0.1.0"

[workspace.dependencies]
tracing = { version = "0.1" }
log = "0.4"
tokio = { version = "1.21" }
eyre = { version = "0.6" }
prometheus-client = { version = "0.22" }

[workspace.lints.clippy]
cargo = { level= "deny", priority = -1 }
style = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }

cargo_common_metadata = "allow"
multiple_crate_versions = "warn"

#extra-plugins = ["clippy::cargo", "+clippy::style", "+clippy::complexity", "+clippy::perf", "+clippy::correctness"]
