[workspace]
members = ["gateways/api", "infrastructure", "application"]
default-members = ["gateways/api"]
resolver = "2"

[workspace.package]
name = "{{project-name}}"
authors = ["{{authors}}"]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
tracing = { version = "0.1" }
log = "0.4"
tokio = { version = "1.48" }
eyre = { version = "0.6" }
prometheus-client = { version = "0.22" }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }

cargo_common_metadata = "allow"
multiple_crate_versions = "warn"
