[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-opentelemetry = "0.23"
opentelemetry = { version = "0.22" }
opentelemetry-otlp = { version = "0.15" }
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio"] }

tracing = { workspace = true, features = ["log"] }
log = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
eyre = { workspace = true }

