[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
infrastructure = { path = "../../infrastructure" }
application = { path = "../../application" }

actix-web = "4"

tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
eyre = { workspace = true }
tracing = { workspace = true, features = ["log"] }