[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
infrastructure = { path = "../../infrastructure" }
application = { path = "../../application" }

actix-web = "4"
tracing-actix-web = { version = "0.7", features = ["emit_event_on_error"] }
config = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-aux = "4.5"

tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
eyre = { workspace = true }
tracing = { workspace = true, features = ["log"] }
prometheus-client = { workspace = true }
futures-util = "0.3"

[dev-dependencies]
reqwest = "0.12"

[lints]
workspace = true
